Correccion imagen autor

--- a/Autores.html
+++ b/Autores.html
@@ -54,9 +54,9 @@
 		<section class="completeArticle">
 				<h1 class="titles">Autores</h1>
 		</section>
-		
+		 
 		<section class="leftArticle">
-					<img src="img/JulianLopez.png" height="400px" align="right" />
+					<img src="img/JulianLopez.PNG" height="400px" align="right" />
 		</section>
 		
 		<section class="rightArticle" >
