Corrección de extenciones de imagenes

--- a/MetodoSeleccion.html
+++ b/MetodoSeleccion.html
@@ -76,7 +76,7 @@
 			
 			<h1 class="titles">Ejemplo en Pseudocódigo</h1>
 			<center>
-			<img src="img/ejemploSeleccion.png" alt="Ejemplo método selección" />
+			<img src="img/ejemploSeleccion.PNG" alt="Ejemplo método selección" />
 			</center>
 		</article>
 		
@@ -93,19 +93,19 @@
 	<footer>
 		<div id="dv_footer" class="div_75p">
 			<div id="dv_facebook" class="ic_footer" background-color="yellow" >
-				<a href="http://www.facebook.com" target="_blank" ><img src='img/facebook.png' width="30px" height="30px"/>JulianLopez</a>
+				<a href="http://www.facebook.com" target="_blank" ><img src='img/facebook.PNG' width="30px" height="30px"/>JulianLopez</a>
 			</div>
 			
 			<div id="dv_twitter" class="ic_footer" background-color="blue">
-				<a href="https://twitter.com/" target="_blank"><img src='img/twitter.png'  width="30px" height="30px"/>@JulianLopez</a>
+				<a href="https://twitter.com/" target="_blank"><img src='img/twitter.PNG'  width="30px" height="30px"/>@JulianLopez</a>
 			</div>
 			
 			<div id="dv_instagram" class="ic_footer" background-color="red">
-				<a href="https://www.instagram.com/a" target="_blank"><img src='img/instagram.png' width="30px" height="30px"/>@JulianLopez</a>
+				<a href="https://www.instagram.com/a" target="_blank"><img src='img/instagram.PNG' width="30px" height="30px"/>@JulianLopez</a>
 			</div>
 			
 			<div id="dv_youtube" class="ic_footer" >
-				<a href="https://www.youtube.com/" target="_blank"><img src='img/youtube.png' width="30px" height="30px"/>JulianLopez</a>
+				<a href="https://www.youtube.com/" target="_blank"><img src='img/youtube.PNG' width="30px" height="30px"/>JulianLopez</a>
 			</div>
 			
 		</div>
